<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:id="@+id/edtEmail"
        android:gravity="left|center_vertical"
        android:hint="@string/email"
        android:textSize="16sp"
        android:background="@drawable/bg_btn_info"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:id="@+id/edtPassword"
        android:gravity="left|center_vertical"
        android:hint="@string/password"
        android:password="true"
        android:textSize="16sp"
        android:background="@drawable/bg_btn_info"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    
    <TextView
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:text="Forgot password?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</LinearLayout>
